# claude-synth

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_LOOPER.md  T8_MIDI_MAPPING.md  TESTING.md  TESTING_STRATEGY.md  acid_looper_curses.py  patches  pyproject.toml  run_looper.sh  run_tests.sh
.github/workflows/: test.yml
melodic-techno-patches/: A_hypnotic_foundation.json  B_evolving_sequences.json  C_peak_intensity.json  D_dark_descent.json  PATCH_GUIDE.md  QUICKSTART.md
patches/: 02_verse.json  03_breakdown.json  05_bridge.json  07_peak_drop.json  deep_acid.json  groove_acid.json  melodic_acid.json  melodic_techno.json  melodic_techno_long.json  melodic_techno_sophisticated.json  test_1_bass_only.json  test_4_closed_hh_only.json  test_6_clap_only.json
swing-patches/: 01_intro.json  04_chorus.json  06_outro.json  08_interlude.json  PATCH_GUIDE.md
test-patches/: README.md  test_2_kick_only.json  test_3_snare_only.json  test_5_open_hh_only.json  test_7_tom_only.json
tests/: __init__.py  conftest.py
tests/fixtures/patches/: test_empty.json  test_invalid.json  test_malformed.txt  test_simple.json
tests/integration/: test_acid_player_midi.py.skip  test_acid_player_simple.py  test_visualization_and_patches.py
tests/unit/: test_drum_pattern_generator.py  test_patch_loader.py  test_tempo_controller.py  test_visual_feedback.py
